# Tectra

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/common/: logging.hpp  time.hpp
